# src/docs/swagger.json
@@ -55,7 +55,6 @@
         }
       }
     },
-
     "/AgriSoko/user/verify": {
       "post": {
         "summary": "Verify",
@@ -102,7 +101,6 @@
         }
       }
     },
-  
     "/AgriSoko/user/forgotPassword": {
       "post": {
         "summary": "Forgot password",
@@ -204,6 +202,46 @@
           }
         }
       }
+    },
+    "/AgriSoko/user/auth/google": {
+      "get": {
+        "summary": "Google OAuth2.0 authentication",
+        "description": "Authenticate with Google",
+        "tags": ["Authentication"],
+        "responses": {
+          "200": {
+            "description": "Redirect to Google login page"
+          }
+        }
+      }
+    },
+    "/AgriSoko/user/auth/google/callback": {
+      "get": {
+        "summary": "Google OAuth2.0 callback",
+        "description": "Callback endpoint for Google OAuth2.0 authentication",
+        "tags": ["Authentication"],
+        "responses": {
+          "200": {
+            "description": "Redirect to dashboard upon successful authentication"
+          }
+        }
+      }
+    },
+    "/AgriSoko/user/role": {
+      "get": {
+        "summary": "Get roles",
+        "description": "Get All roles",
+        "tags": ["Roles"],
+    
+        "responses": {
+          "200": {
+            "description": "roles Fetched successfully"
+          },
+          "404": {
+            "description": "Error for fetching roles"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -216,9 +254,6 @@
         "email": {
           "type": "string"
         },
-        "userName": {
-          "type": "string"
-        },
         "password": {
           "type": "string",
           "minLength": 6
@@ -226,23 +261,18 @@
         "confirmPassword": {
           "type": "string"
         },
-      
-        "address1": {
-          "type": "string"
-        },
         "PhoneNumber": {
           "type": "number"
         },
         "role": {
           "type": "string",
-          "enum": ["goverment", "farmer", "buyer"],
+          "description": "ID of the role from the role model",
           "default": "farmer"
         }
-        
       },
-      "required": ["fullName","email","userName", "password","confirmPassword","address1","phoneNumber","role"]
+      "required": ["fullName", "email","password", "confirmPassword","PhoneNumber", "role"]
     },
-
+    
     "otp": {
       "type": "object",
       "properties": {
@@ -282,7 +312,6 @@
         "id":{
           "type": "string"
         },
-
         "password": {
           "type": "string"
         }
@@ -298,7 +327,6 @@
         "email": {
           "type": "string"
         },
-      
         "address1": {
           "type": "string"
         },
@@ -308,12 +336,9 @@
         "PhoneNumber": {
           "type": "number"
         }
-  
-        
       },
-      "required": ["fullName","email","address1","address2","phoneNumber","role"]
+      "required": ["fullName","email","address1","address2","PhoneNumber"]
     }
-
   },
   "securityDefinitions": {
     "BearerAuth": {
